# BookMyComics

.circleci/: config.yml
browsers/: chrome.json  firefox.json
server/: Cargo.toml  cert.pem  key.pem
server/src/: client.rs  context.rs  lib.rs  main.rs  messages.rs  session.rs
tests/func/: test_reader.py  test_sidebar_display.py
tests/func/utils/: bmc.py
tests/func/utils/drivers/: chrome.py  firefox.py
web-extension/: background-engine.js  sidebar.html  sources.js  strings.js
web-extension/engine/: bookmycomics.js
web-extension/scripts/: load-bookmarks.js
web-extension/support/: manganato.js
web-extensions/chrome/engine/: datamodel.js  ui.js
web-extensions/chrome/scripts/: load-bookmarks.js
