[package]
name = "bookmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4.2.0"
actix-ws = "0.2.5"
diesel = "2.1.3"
env_logger = "0.10.0"
log = "0.4.20"
openssl = "0.10.57"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
unique_id = "0.1.5"
